get movie by id added
