# swagger.json
@@ -108,6 +108,35 @@
       }
     },
     "/movies/{id}": {
+      "get": {
+        "tags": ["movies"],
+        "summary": "Get a movie by its ID",
+        "description": "Returns a single movie",
+        "operationId": "getMovieById",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of movie to return",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Movie"
+            }
+          },
+          "404": {
+            "description": "Movie not found"
+          }
+        }
+      },
       "put": {
         "tags": ["movies"],
         "summary": "Update an existing movie",
